<resources>
    <string name="app_name">STUer</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="carpool">拼车</string>
    <string name="sell">转让</string>
    <string name="treehole">树洞</string>
    <string name="about">关于</string>
    <string name="date">约</string>
    <string name="others">其他</string>
    <string name="function">功能</string>
    <string name="stu">校内</string>

    <string name="mine">我的拼车</string>
    <string name="title_activity_carpooling">CarpoolingActivity</string>
    <string name="post_title">发布</string>
    <string name="title_activity_mine">MineActivity</string>
    <string name="mine_title_1">我的拼车</string>
    <string name="mine_title_2">我的约</string>
    <string name="dateDescription">约啥呢？</string>

    <string name="tab_sport">运动</string>
    <string name="tab_eat">吃喝</string>
    <string name="tab_film">电影</string>
    <string name="tab_game">游戏</string>
    <string name="tab_library">泡馆</string>
    <string name="tab_others">其他</string>
    <string name="title_activity_stu">StuActivity</string>
    <string name="title_activity_post_message">PostMessageActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="net_error">网络异常...请稍后再试...</string>
    <string name="title_activity_photo">PhotoActivity</string>
    <string name="toast_no_data">没有数据...</string>
    <string name="toast_net_error">网络异常，请稍后再试...</string>
    <string name="daynight">夜间模式</string>
    <string name="setting">设置</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_comment">CommentActivity</string>
    <string name="title_activity_about">AboutActivity</string>

    <string name="contributor">contributors: </string>
    <string name="reference">powered by awesome open source projects: </string>
    <string name="my_open_source">项目开源地址：</string>
    <string name="copyright">©2016 stuer.applinzi.com</string>
    <string name="copyright_1">All Rights Reserved</string>

</resources>
