<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">

    <group android:checkableBehavior="single">
        <item android:title="@string/function">
            <menu>
                <item
                    android:id="@+id/nva_carpool"
                    android:icon="@drawable/ic_nav_car"
                    android:title="@string/carpool"
                    app:showAsAction="always"/>

                <item
                    android:id="@+id/nva_date"
                    android:icon="@drawable/ic_nav_date"
                    android:title="@string/date"
                    app:showAsAction="always"/>

                <item
                    android:id="@+id/nav_sell"
                    android:icon="@drawable/ic_nav_sell"
                    android:title="@string/sell"
                    app:showAsAction="always"/>

                <item
                    android:id="@+id/nav_treehole"
                    android:icon="@drawable/ic_nav_treehole"
                    android:title="@string/treehole"
                    app:showAsAction="always"/>

                <item
                    android:id="@+id/nav_stu"
                    android:icon="@drawable/ic_nav_stu"
                    android:title="@string/stu"
                    app:showAsAction="always"/>

            </menu>
        </item>

        <item android:title="@string/others">
            <menu>


                <item
                    android:id="@+id/nav_daynight"
                    android:icon="@drawable/ic_nav_daynight"
                    android:title="@string/daynight"/>

                <item
                    android:id="@+id/nav_setting"
                    android:icon="@drawable/ic_nav_setting"
                    android:title="@string/setting"/>

                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_nav_about"
                    android:title="@string/about"/>
            </menu>
        </item>

    </group>


</menu>